Correcting spacing

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -5,6 +5,7 @@
 
 html
     font-family: sans-serif
+    font-size: $base 
 
 .App 
     @include display-fullscreen
@@ -29,6 +30,13 @@ html
 .start-button, .login-button 
     width: $wide
 
+.start-button
+    position: relative
+    top: $base * 3
+
+.footer-info 
+    text-align: center
+
 .menu 
     list-style-type: none
     display: flex
@@ -41,14 +49,14 @@ html
 .menu-item 
     margin: $base
     padding: $base
-    color: $white
+    color: $white 
 
 .start, .login, .signup 
     @include display-fullscreen
     display: flex
     flex-direction: column
     align-items: center
-    justify-content: space-around
+    justify-content: space-evenly
 
 .password-input 
     display: flex
@@ -60,8 +68,11 @@ html
     align-self: flex-end
     margin-right: $base
 
-.form 
+.form, .confirmation
     @include center-vertically
+
+.confirmation
+    margin-top: $base * 6
 
 .input 
     width: $wide
@@ -79,13 +90,13 @@ html
 
 .social-media-login 
     display: flex
-    justify-content: space-around
+    justify-content: center
 
 .break 
     background-color: $white
     height: 5px
     width: 100vw
-    margin: $base * 2 0
+    margin: $base * 4 0
 
 .footer-text 
     font-weight: bold
@@ -100,3 +111,6 @@ html
 
 .checkbox-label
     white-space: nowrap
+
+.checkbox 
+    margin: $base * 0.5
