--- a/src/utils/modules.sass
+++ b/src/utils/modules.sass
@@ -28,7 +28,7 @@ $black: #0b090a
 
 @mixin display-fullscreen
     width: 100vw
-    height: calc(100vh - $base * 2.5)
+    height: 100vh
 
 @mixin center-both-axes
     display: flex
@@ -45,6 +45,7 @@ $black: #0b090a
 
 @mixin heading
     text-align: center
+    font-size: $base * 1.5
 
 @mixin button
     margin: $base * 2
